# VanDerPol

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake-single-platform.yml  test.yml
src/: .pylintrc  binding.cc  compile.sh  eqDiffSolver.h  main.py
test/: CMakeLists.txt  test_eulerSolver.cc  test_solution.cc
